fix(social): increase padding a bit on mobile

--- a/src/patterns/Social/_social.scss
+++ b/src/patterns/Social/_social.scss
@@ -1,5 +1,7 @@
 @use '#scss/allPartials' as *;
 
+$social_icon_height: 1.75rem;
+
 .#{$px}-social {
   align-items: center;
   display: inline-flex;
@@ -53,7 +55,7 @@
       align-items: center;
       border-top: 1px solid #eae8e4;
       display: flex;
-      gap: 0 1.25rem;
+      gap: 0 1.75rem;
       justify-content: center;
       list-style: none;
       margin: $spacing-md 0 0;
@@ -70,11 +72,11 @@
 
       li {
         cursor: pointer;
-        height: 32px;
+        height: $social_icon_height;
 
         svg {
-          height: 32px;
-          width: 32px;
+          height: $social_icon_height;
+          width: $social_icon_height;
         }
       }
     }
